<resources>
    <string name="app_name">Rocket Quizzy</string>
    <!-- TODO: Remove or change this placeholder text --><string name="title_activity_quiz_info">QuizInfoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="selectLanguage">Select Your Language</string>
    <string name="hintForQuestionType">Select Question Type</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="instruction">This quiz consists of 10 multiple-choice questions. To be successful with the weekly quizzes, it’s important to thoroughly read chapter 5 in the textbook.  It will also be extremely useful to study the key terms at the end of the chapter and review the Test Your Knowledge activity at the end of the chapter. Keep the following in mind:\n  •Multiple Attempts - You will have three attempts for this quiz with your highest score being recorded in the grade book.\n•Timing - You will need to complete each of your attempts in one sitting, as you are allotted 30 minutes to complete each attempt. \n •Answers - You may review your answer-choices and compare them to the correct answers after your final attempt.\n To start, click the \<b>"Take the Quiz\"</b> button. When finished, click the \<b>"Submit Quiz\"</b> button.</string>
    <string name="quiz_timing">60 minutes</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="app_desc">Play, Gain and Enjoy</string>
    <string name="quiz_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="opt_no">\"Option No. \"</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="level_5">Level 5</string>
    <string name="network_error">Network Error!</string>
    <string name="permit_notice">We need this permit to start this quiz!</string>
    <string name="sth_went_wrong">Something Went Wrong!</string>
    <string name="beginner">Beginner</string>
    <string name="continuing">Continuing</string>
    <string name="travel_newbie">Travel Newbie</string>
    <string name="experienced">Experienced</string>
    <string name="zen_master">Zen Master</string>
    <string name="name_update_message">Name Updated Successfully</string>
    <string name="log_out">Log Out</string>
    <string name="log_out_dialog_desc">Do you really want to logout from this session ?</string>
    <string name="field_not_empty_msg">Field can not be empty!</string>
    <string name="name_max_limit_msg">Name cannot be greater than 15 words!</string>
    <string name="name_min_limit_msg">Name cannot be less than 5 words!</string>
    <string name="option_restriction_msg">More than 5 options are not allowed!</string>
    <string name="select_question_img_msg">Select Your Question Image</string>
    <string name="select_question_audio_msg">Select Your Audio File</string>
    <string name="image_not_empty_msg">Image cannot be Empty!</string>
    <string name="audio_not_empty_msg">Audio cannot be Empty!</string>
    <string name="mark_the_c_ans_msg">Mark the Correct Answer!</string>
    <string name="neither_option_empty_msg">Neither Option can be empty!</string>
    <string name="question_empty_msg">Question cannot be empty!</string>
    <string name="quiz_review_msg">Quiz sent for reviewing</string>
    <string name="banner_not_empty_msg">Banner Cannot be Empty</string>
    <string name="cannot_empty_msg">\" cannot be Empty!\"</string>
    <string name="badge_won_msg">\"You had won\n the level \"</string>
    <string name="golden_badge">\" golden badge.\"</string>
    <string name="removed_from_fav_msg">Removed from Favourites</string>
    <string name="added_to_fav_msg">Added to Favourites</string>
    <string name="profile_updated_msg">Profile Picture Updated</string>
    <string name="time_left_msg">\"Time Left:- \"</string>
    <string name="quit_txt">Quit</string>
    <string name="quit_desc_txt">Do you really want to quit from this quiz ?</string>
    <string name="question_txt">\"question \"</string>
    <string name="of_txt">\" of \"</string>
    <string name="end_up">End Up</string>
    <string name="quiz_end_desc_msg">Do you really want to end up the quiz ?</string>
    <string name="quit">Quit</string>
    <string name="quiz_quit_dialog_desc_msg">Do you really want to quit from this quiz ?</string>
    <string name="search_in_msg">\"Search in \"</string>
    <string name="showing_msg">\"Showing \"</string>
    <string name="quizzes_msg">\" Quizzes\"</string>
    <string name="good_job_msg">Good Job!</string>
    <string name="better_luck_msg">Better Luck\nnext time!</string>
    <string name="questions_msg">\" questions\"</string>
    <string name="you_got_msg">\"You got \"</string>
    <string name="quiz_points_msg">\" quiz points\"</string>
    <string name="no_internet_dialog_title">No Internet Connection</string>
    <string name="no_internet_dialog_desc">This App Needs internet to run. Go to Setting ?</string>
    <string name="yes_msg">Yes</string>
    <string name="no_msg">No</string>
    <string name="add_new_quiz">Add New Quiz</string>
    <string name="submit_new_quiz_to_this_app">Submit New Quiz to this App :-</string>
    <string name="quiz_title">Quiz Title</string>
    <string name="quiz_description_hint">Quiz Description...</string>
    <string name="upload_banner_for_the_quiz">Upload Banner for the Quiz</string>
    <string name="add_question">Add Question</string>
    <string name="your_added_questions">Your Added Questions</string>
    <string name="not_added_any_questions_yet">Not Added Any Questions yet</string>
    <string name="processing">Processing...</string>
    <string name="slide_to_confirm">Slide to Confirm</string>
    <string name="all_categories">All Categories</string>
    <string name="search_categories_hint">Search Categories</string>
    <string name="not_available_categories">Not Available Categories</string>
    <string name="hurray">Hurray!</string>
    <string name="back_to_home">Back to Home</string>
    <string name="play">Play</string>
    <string name="your_profile_picture">Your Profile Picture</string>
    <string name="let_s_start_with_your_account">Let`s Start with your Account.</string>
    <string name="please_provide_your_phone_number_by_which_we_will_make_your_account_for_better_use_and_safety">Please Provide your Phone Number by which we will make your account for better use and safety.</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="login">Login</string>
    <string name="otp_verify">OTP Verify</string>
    <string name="incorrect_otp">Incorrect OTP</string>
    <string name="resend_otp">RESEND OTP?</string>
    <string name="submit">Submit</string>
    <string name="magic_play_desc">Do you feel confident? Here you`ll challenge one of our best questions!</string>
    <string name="game">Game</string>
    <string name="unavaliable_quizzes_msg">Not Available quizzes in this category</string>
    <string name="check_correct_answer">Check Correct Answer</string>
    <string name="level">Level</string>
    <string name="badge_earned">Badge earned</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="completion">Completion</string>
    <string name="skkiped">Skkiped</string>
    <string name="incorrect_answer">Incorrect Answer</string>
    <string name="done">Done</string>
    <string name="account_info">Account Info</string>
    <string name="please_provide_your_name_for_our_knowledge">Please Provide your Name for our knowledge.</string>
    <string name="your_name">Your Name</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="add_new_question">Add New Question</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_audio">Upload Audio</string>
    <string name="question">Question</string>
    <string name="mark_the_correct_answer">Mark the correct answer :-</string>
    <string name="add">Add</string>
    <string name="your_favourites">Your Favourites</string>
    <string name="no_favourites">No Favourites</string>
    <string name="search">Search</string>
    <string name="not_available_quizzes">Not Available quizzes.</string>
    <string name="top_quizzes">Top Quizzes</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="let_s_play">Let`s Play</string>
    <string name="be_the_first">Be the first!</string>
    <string name="your_profile">Your Profile</string>
    <string name="user_type">User Type:-</string>
    <string name="normal">Normal</string>
    <string name="you_can_update_your_name_and_profile_picture_here">You can update your Name and Profile Picture here.</string>
    <string name="your_number">Your Number</string>
    <string name="your_achievements">Your Achievements</string>
    <string name="logout">Logout</string>
    <string name="app_settings">App Settings</string>
    <string name="day_or_night">Day or Night</string>
    <string name="select_your_language">Select Your Language -</string>
    <string name="stop_sending_notifications">Stop Sending Notifications</string>
    <string name="delete">Delete</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="my_favourite">My Favourite</string>
    <string name="magic_play">Magic Play</string>
    <string name="current_lang_msg">Current Language</string>

    <string-array name="question_types">
        <item>Select Question Type</item>
        <item>Text</item>
        <item>Image</item>
        <item>Audio</item>
    </string-array>
</resources>