<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkColor"
        android:id="@+id/content_view"
        tools:context=".view.fragments.HomeFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:padding="15dp"
                        android:src="@drawable/logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/abril_fatface"
                        android:text="@string/app_name"
                        android:textColor="@color/themeColor"
                        android:textSize="19sp" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="30dp"
                    android:id="@+id/search_layout"
                    app:cardBackgroundColor="@color/darkLight"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/search_bar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:drawableStart="@drawable/ic_search"
                            android:drawablePadding="10dp"
                            android:drawableTint="@color/themeColor"
                            android:fontFamily="@font/muli"
                            android:inputType="text"
                            android:paddingEnd="20dp"
                            android:hint="@string/search"
                            android:paddingStart="15dp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/searchLayout"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:id="@+id/searchRecycler"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:orientation="vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/not_available_quizzes"
                        android:background="@drawable/blank_recycler_ui"
                        android:fontFamily="@font/muli"
                        android:textColor="@color/themeColor"
                        android:padding="30dp"
                        android:visibility="gone"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:id="@+id/blank_recycler_tv"/>

                </LinearLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/slider_view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:visibility="gone"
                    android:layout_marginBottom="20dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/topLayout"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:fontFamily="@font/alegreya"
                        android:text="@string/top_quizzes"
                        android:textColor="@color/themeColor"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:id="@+id/top_item"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/categoryLayout"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="25dp"
                            android:fontFamily="@font/alegreya"
                            android:text="@string/categories"
                            android:textColor="@color/themeColor"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/level_btn_bg"
                            android:fontFamily="@font/muli"
                            android:text="@string/view_all"
                            android:textAllCaps="false"
                            android:id="@+id/viewAllBtn"
                            android:textColor="@color/themeColor"
                            android:textSize="13sp" />
                    </RelativeLayout>

                    <com.rocket.quizzy.view.custom.ExpandableHeightGridView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:nestedScrollingEnabled="false"
                        android:orientation="vertical"
                        android:columnWidth="150dp"
                        android:gravity="center"
                        android:numColumns="2"
                        android:stretchMode="spacingWidthUniform"
                        android:verticalSpacing="10dp"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        tools:listitem="@layout/category_item"
                        android:id="@+id/categoryRV"/>


                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </FrameLayout>
</layout>